--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,37 @@
-div {
+html, body {
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  font-family: PingFang HK, sans-serif;
+  color: #2f2f2f; }
+
+body {
+  margin: 0; }
+
+#app {
+  display: flex;
+  width: 100%;
+  height: 100%; }
+  #app * {
+    box-sizing: border-box; }
+
+.leftBar {
+  background: white;
+  border-right: 1px solid #999;
+  border-left: 0;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 1em;
+  flex-basis: 30%; }
+  .leftBar .search {
+    background-color: white;
+    cursor: text;
+    padding: 3px;
+    border: 1px solid #ddd;
+    text-indent: 5px;
+    outline: 0;
+    height: 30px;
+    font-size: 14px; }
+    .leftBar .search:hover {
+      border-color: #a3af2a; }
+    .leftBar .search:focus {
+      border-color: rgba(20, 105, 144, 0.5); }
