--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,10 @@ body {
   margin: 0;
 }
 
+li {
+  list-style-type: none;
+}
+
 #app {
   display: flex;
   width: 100%;
@@ -24,22 +28,48 @@ body {
   border-left: 0;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  padding: 1em;
-  flex-basis: 30%;
+  width: 30%;
+  overflow: auto;
+  min-width: 200px;
   .search {
+    &::-webkit-input-placeholder {
+      color: #999;
+    }
     background-color: white;
+    border-radius: 4px;
     cursor: text;
     padding: 3px;
-    border: 1px solid #ddd;
+    border: 1px solid #e8e8e8;
     text-indent: 5px;
     outline: 0;
     height: 30px;
     font-size: 14px;
+    margin: 4%;
     &:hover {
       border-color: #a3af2a;
     }
     &:focus {
       border-color: rgba(20, 105, 144, 0.5);
+    }
+  }
+
+  ul.list {
+    overflow: auto;
+    padding: 0;
+    li {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      padding-left: 4%;
+      font-size: 14px;
+      color: #2b2b2b;
+      margin-bottom: 5px;
+      cursor: pointer;
+      &.active {
+        background-color: #4cb4f1;
+        color: #ffffff;
+
+      }
     }
   }
 }
