--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,7 @@ li {
   display: flex;
   width: 100%;
   height: 100%;
+
   * {
     box-sizing: border-box;
   }
@@ -31,10 +32,13 @@ li {
   width: 30%;
   overflow: auto;
   min-width: 200px;
+
+
   .search {
     &::-webkit-input-placeholder {
       color: #999;
     }
+
     background-color: white;
     border-radius: 4px;
     cursor: text;
@@ -44,10 +48,12 @@ li {
     outline: 0;
     height: 30px;
     font-size: 14px;
-    margin: 4%;
+    margin: 22px 4% 4%;
+
     &:hover {
       border-color: #a3af2a;
     }
+
     &:focus {
       border-color: rgba(20, 105, 144, 0.5);
     }
@@ -56,6 +62,7 @@ li {
   ul.list {
     overflow: auto;
     padding: 0;
+
     li {
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -65,6 +72,7 @@ li {
       color: #2b2b2b;
       margin-bottom: 5px;
       cursor: pointer;
+
       &.active {
         background-color: #4cb4f1;
         color: #ffffff;
