--- a/src/main.scss
+++ b/src/main.scss
@@ -89,12 +89,11 @@ li {
 
 .wrapContent {
   min-width: 300px;
-  padding: 10px;
   width: 70%;
 
   .header {
     display: flex;
-
+    margin: 10px;
     span {
       line-height: 30px;
       margin: 0 2%;
@@ -104,6 +103,11 @@ li {
   .title {
     @include Input;
     flex: 1;
+  }
+
+  .content{
+    border-top: 1px solid #e8e8e8;
+    padding: 5px;
   }
 
 }
