--- a/src/main.css
+++ b/src/main.css
@@ -89,4 +89,11 @@ li {
       border-color: rgba(20, 105, 144, 0.5); }
   .wrapContent .content {
     border-top: 1px solid #e8e8e8;
-    padding: 5px; }
+    padding: 5px;
+    display: flex;
+    height: calc(100% - 30px); }
+    .wrapContent .content > div {
+      flex: 1; }
+    .wrapContent .content .showMD {
+      overflow: auto;
+      padding: 4px; }
