--- a/src/main.scss
+++ b/src/main.scss
@@ -94,6 +94,7 @@ li {
   .header {
     display: flex;
     margin: 10px;
+
     span {
       line-height: 30px;
       margin: 0 2%;
@@ -105,9 +106,20 @@ li {
     flex: 1;
   }
 
-  .content{
+  .content {
     border-top: 1px solid #e8e8e8;
     padding: 5px;
+    display: flex;
+    height: calc(100% - 30px);
+
+    > div {
+      flex: 1;
+    }
+
+    .showMD {
+      overflow: auto;
+      padding: 4px;
+    }
   }
 
 }
