--- a/src/main.css
+++ b/src/main.css
@@ -40,10 +40,10 @@ li {
     margin: 22px 4% 4%; }
     .leftBar .search::-webkit-input-placeholder {
       color: #999; }
-    .leftBar .search:hover {
-      border-color: #a3af2a; }
+    .leftBar .search:hover, .leftBar .search:focus {
+      border-color: #40a9ff; }
     .leftBar .search:focus {
-      border-color: rgba(20, 105, 144, 0.5); }
+      box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2); }
   .leftBar ul.list {
     overflow: auto;
     padding: 0; }
@@ -51,13 +51,13 @@ li {
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
-      padding-left: 4%;
+      padding: 2px 0 2px 4%;
       font-size: 14px;
       color: #2b2b2b;
       margin-bottom: 5px;
       cursor: pointer; }
       .leftBar ul.list li.active {
-        background-color: #4cb4f1;
+        background-color: #40a9ff;
         color: #ffffff; }
 
 .wrapContent {
@@ -85,10 +85,10 @@ li {
     flex: 1; }
     .wrapContent .title::-webkit-input-placeholder {
       color: #999; }
-    .wrapContent .title:hover {
-      border-color: #a3af2a; }
+    .wrapContent .title:hover, .wrapContent .title:focus {
+      border-color: #40a9ff; }
     .wrapContent .title:focus {
-      border-color: rgba(20, 105, 144, 0.5); }
+      box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2); }
   .wrapContent .content {
     border-top: 1px solid #e8e8e8;
     padding: 5px;
