--- a/src/main.scss
+++ b/src/main.scss
@@ -39,12 +39,12 @@ li {
   height: 30px;
   font-size: 14px;
 
-  &:hover {
-    border-color: #a3af2a;
+  &:hover, &:focus {
+    border-color: #40a9ff;
   }
 
   &:focus {
-    border-color: rgba(20, 105, 144, 0.5);
+    box-shadow: 0 0 0 2px rgba(24, 144, 255, .2);
   }
 }
 
@@ -72,16 +72,15 @@ li {
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
-      padding-left: 4%;
+      padding: 2px 0 2px 4%;
       font-size: 14px;
       color: #2b2b2b;
       margin-bottom: 5px;
       cursor: pointer;
 
       &.active {
-        background-color: #4cb4f1;
+        background-color: #40a9ff;
         color: #ffffff;
-
       }
     }
   }
