--- a/assets/index.ejs
+++ b/assets/index.ejs
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta http-equiv="Window-target" content="_top">
     <title>snippet tool</title>
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'self';img-src data: *;style-src 'unsafe-inline' *;script-src * 'unsafe-inline'">
 
 </head>
 <body>
-
+<div id="root"></div>
 </body>
 </html>
