--- a/assets/index.ejs
+++ b/assets/index.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>snippet tool</title>
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src 'self';img-src data: *;style-src 'unsafe-inline' *;script-src * 'unsafe-inline'">
+<!--    <meta http-equiv="Content-Security-Policy"-->
+<!--          content="default-src 'self';img-src data: *;style-src 'unsafe-inline' *;script-src * 'unsafe-inline'">-->
 
 </head>
 <body>
