编辑器 部分使用

--- a/src/render/global.less
+++ b/src/render/global.less
@@ -15,6 +15,7 @@ a {
 
 #root {
   height: 100%;
+  display: flex;
 }
 
 li {
@@ -24,4 +25,8 @@ li {
 ul {
   margin: 0;
   padding: 0;
+}
+
+.CodeMirror{
+  flex: 1;
 }
