editor 样式的优化 以及数据存储解决方案

--- a/src/render/pages/editor.global.less
+++ b/src/render/pages/editor.global.less
@@ -1,5 +1,10 @@
 //.cm-s-hypermd-light span.cm-inline-code.hmd-hidden-token
 
+.CodeMirror{
+  flex: 1;
+  height: auto;
+  padding: 20px;
+}
 
 .CodeMirror .HyperMD-codeblock-bg.CodeMirror-linebackground {
   border: 0;
@@ -19,3 +24,6 @@
   color: #DA625B;
 }
 
+.CodeMirror pre.CodeMirror-line, .CodeMirror pre.CodeMirror-line-like {
+  padding: 0 8px;
+}
