添加可拖曳区域

--- a/src/render/pages/FileLists.less
+++ b/src/render/pages/FileLists.less
@@ -1,5 +1,11 @@
-.fileList{
-  width:200px;
+.fileList {
+  width: 200px;
   height: 100%;
+  background-color: #F7F6F3;
   overflow: auto;
+}
+
+.header {
+  height: 30px;
+  -webkit-app-region: drag;
 }
