--- a/src/render/pages/editor.global.less
+++ b/src/render/pages/editor.global.less
@@ -4,6 +4,7 @@
   flex: 1;
   height: auto;
   padding: 20px;
+  font-size: 14px;
 }
 
 .CodeMirror .HyperMD-codeblock-bg.CodeMirror-linebackground {
@@ -26,4 +27,13 @@
 
 .CodeMirror pre.CodeMirror-line, .CodeMirror pre.CodeMirror-line-like {
   padding: 0 8px;
+}
+
+.cm-s-hypermd-light pre.HyperMD-codeblock {
+  color: #37352F;
+}
+
+
+.cm-s-hypermd-light .hmd-fold-html-stub, .cm-s-hypermd-light .hmd-fold-code-stub, .cm-s-hypermd-light.CodeMirror div.HyperMD-hover > .HyperMD-hover-content code, .cm-s-hypermd-light pre.HyperMD-table-row span.cm-hmd-table-sep, .cm-s-hypermd-light span.cm-formatting-hashtag, .cm-s-hypermd-light span.cm-inline-code, .cm-s-hypermd-light pre.HyperMD-codeblock, .cm-s-hypermd-light span.cm-formatting-task, .cm-s-hypermd-light span.cm-hmd-indent-in-quote, .cm-s-hypermd-light pre.HyperMD-hr, .cm-s-hypermd-light span.cm-hmd-frontmatter, .cm-s-hypermd-light span.cm-hmd-orgmode-markup, .cm-s-hypermd-light span.cm-formatting-em, .cm-s-hypermd-light span.cm-formatting-strong, .cm-s-hypermd-light span.cm-formatting-strikethrough, .cm-s-hypermd-light span.cm-formatting-code, .cm-s-hypermd-light span.cm-formatting-link, .cm-s-hypermd-light span.cm-formatting-image, .cm-s-hypermd-light span.cm-url, .cm-s-hypermd-light span.cm-math, .cm-s-hypermd-light span.hmd-fold-math-placeholder, .cm-s-hypermd-light .CodeMirror-linewidget kbd, .cm-s-hypermd-light .hmd-fold-html kbd {
+  font: 14px/1.5 Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","HeitiSC","WenQuanYi Micro Hei",sans-serif;
 }
