--- a/assets/index.ejs
+++ b/assets/index.ejs
@@ -7,7 +7,7 @@
     <title>snippet tool</title>
 <!--    <meta http-equiv="Content-Security-Policy"-->
 <!--          content="default-src 'self';img-src data: *;style-src 'unsafe-inline' *;script-src * 'unsafe-inline'">-->
-
+<Link rel="stylesheet" href="//at.alicdn.com/t/font_1794830_h5uht3dn2y.css">
 </head>
 <body>
 <div id="root"></div>
