--- a/assets/index.ejs
+++ b/assets/index.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>snippet tool</title>
-<!--    <meta http-equiv="Content-Security-Policy"-->
-<!--          content="default-src 'self';img-src data: *;style-src 'unsafe-inline' *;script-src * 'unsafe-inline'">-->
-<Link rel="stylesheet" href="//at.alicdn.com/t/font_1794830_h5uht3dn2y.css">
+    <!--    <meta http-equiv="Content-Security-Policy"-->
+    <!--          content="default-src 'self';img-src data: *;style-src 'unsafe-inline' *;script-src * 'unsafe-inline'">-->
+    <%= webpackConfig.mode === 'development' ? `<Link rel="stylesheet" href=${htmlWebpackPlugin.options.iconfontUrl}>` : '' %>
 </head>
 <body>
 <div id="root"></div>
