--- a/assets/index.ejs
+++ b/assets/index.ejs
@@ -284,7 +284,7 @@
                 <div class="bottom_part"></div>
                 <div class="bottom_hole"></div>
             </div>
-            <p style=" text-align: center">loading...</p>
+            <p style=" text-align: center">依赖加载中...</p>
         </div>
     </div>
 </div>
