--- a/src/render/pages/FileLists.less
+++ b/src/render/pages/FileLists.less
@@ -10,6 +10,14 @@
   -webkit-app-region: drag;
 }
 
+
+.title{
+  font-size: 14px;
+  color: #AAA9A5;
+  margin-bottom: 8px;
+  padding-left: 12px;
+}
+
 .item {
   height: 32px;
   padding-left: 12px;
