--- a/src/render/modals/BaseModal.global.less
+++ b/src/render/modals/BaseModal.global.less
@@ -1,14 +1,14 @@
-.container {
+.modal-container {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 1001;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.box {
+.modal-box {
   width: 400px;
   height: 300px;
   background-color: #ffffff;
