--- a/src/render/global.less
+++ b/src/render/global.less
@@ -5,7 +5,10 @@ html, body {
   margin: 0;
 }
 
-body {
+html{
+  font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  color: rgb(55, 53, 47);
+  fill: currentcolor;
   -webkit-font-smoothing: antialiased;
 }
 
