--- a/src/render/global.less
+++ b/src/render/global.less
@@ -5,8 +5,8 @@ html, body {
   margin: 0;
 }
 
-html{
-  font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+html {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
   color: rgb(55, 53, 47);
   fill: currentcolor;
   -webkit-font-smoothing: antialiased;
@@ -32,4 +32,8 @@ li {
 ul {
   margin: 0;
   padding: 0;
+}
+
+fieldset {
+  border: 0
 }
