--- a/src/render/modals/BaseModal.global.less
+++ b/src/render/modals/BaseModal.global.less
@@ -9,6 +9,7 @@
 }
 
 .modal-box {
+  overflow: hidden;
   width: 400px;
   height: 300px;
   background-color: #ffffff;
@@ -19,4 +20,10 @@
   margin: auto;
   border-radius: 4px;
   transform: translateY(-50%);
+}
+
+.modal-title{
+  font-size: 14px;
+  margin: 10px 0 0 10px;
+  font-weight: 500;
 }
