feat: modal 修改,部分配置修改

--- a/src/render/modals/BaseModal.global.less
+++ b/src/render/modals/BaseModal.global.less
@@ -24,6 +24,14 @@
 
 .modal-title{
   font-size: 14px;
-  margin: 10px 0 0 10px;
+  margin: 10px 10px 0 10px;
   font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-close-icon{
+  color: #777777;
+  cursor: pointer;
+  font-size: 16px;
 }
