feat: loki 事件的明晰,部分 css 修改

--- a/src/render/pages/editor.global.less
+++ b/src/render/pages/editor.global.less
@@ -25,9 +25,11 @@
   color: #DA625B;
 }
 
-.CodeMirror pre.CodeMirror-line, .CodeMirror pre.CodeMirror-line-like {
-  padding: 0 5px;
-}
+//.CodeMirror pre.CodeMirror-line, .CodeMirror pre.CodeMirror-line-like {
+//  padding: 0 5px;
+//}
+// 忘记当初这里设置是因为什么原因了
+// 影响的地方: 1.  - 无序列表的显示问题
 
 .cm-s-hypermd-light pre.HyperMD-codeblock {
   color: #37352F;
