--- a/src/render/form/Form.less
+++ b/src/render/form/Form.less
@@ -41,10 +41,32 @@
   white-space: nowrap;
   padding-left: 12px;
   padding-right: 12px;
-  box-shadow: rgba(15, 15, 15, 0.4) 0px 1px 2px , rgba(23, 164, 241, 0.6) 0px 0px 0px 1px inset;
+  box-shadow: rgba(15, 15, 15, 0.4) 0px 1px 2px, rgba(23, 164, 241, 0.6) 0px 0px 0px 1px inset;
   border: 0;
+  overflow: hidden;
+  z-index: 1;
+  outline: none;
+  position: relative;
+
+  &::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    background: #138bc9;
+    top: -50%;
+    left: 0;
+    bottom: -50%;
+    width: 1.25em;
+    transform: translate3d(-200%, 0, 0) rotate(35deg);
+  }
+
+  &:hover::after {
+    transition: transform 0.5s ease-in-out;
+    transform: translate3d(500%, 0, 0) rotate(35deg);
+  }
 
   &:active {
     background-color: #138bc9;
   }
+
 }
