--- a/src/render/form/Form.less
+++ b/src/render/form/Form.less
@@ -18,6 +18,10 @@
   &:focus {
     box-shadow: rgba(46, 170, 220, 0.7) 0px 0px 0px 1px inset, rgba(46, 170, 220, 0.4) 0px 0px 0px 2px !important
   }
+
+  &.inputError:focus {
+    box-shadow: rgba(255, 0, 0, 0.7) 0px 0px 0px 1px inset, rgba(255, 0, 0, 0.4) 0px 0px 0px 2px !important
+  }
 }
 
 
@@ -73,7 +77,7 @@
 
 
 .error {
-  font-size: 13px;
+  font-size: 12px;
   color: red;
   margin-top: 5px;
 }
