feat: db 文件部分修改 1

--- a/src/render/pages/editor.global.less
+++ b/src/render/pages/editor.global.less
@@ -5,6 +5,7 @@
   height: auto;
   padding: 20px;
   font-size: 14px;
+  cursor: text;
 }
 
 .CodeMirror .HyperMD-codeblock-bg.CodeMirror-linebackground {
