--- a/src/render/popover/popover.global.less
+++ b/src/render/popover/popover.global.less
@@ -1,12 +1,26 @@
+@box-width: 100px;
+
 .popover-fileMore {
   position: absolute;
   transition: transform 500ms;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
 }
 
-.popover-wrap {
+
+.popover-box {
   background: #fff;
-  width: 100px;
+  width: @box-width;
   height: 100px
+}
+
+.popover-arrow {
+  display: block;
+  position: absolute;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #fff;
+  top: -6px;
+  left: @box-width/2 - 3px;
+  filter: drop-shadow(0px -2px 2px rgba(52, 73, 94, 0.1));
 }
