feat: popover 样式基本完成

--- a/src/render/popover/popover.global.less
+++ b/src/render/popover/popover.global.less
@@ -1,17 +1,18 @@
-@box-width: 100px;
+@box-width: 120px;
 
 .popover-fileMore {
   position: absolute;
   transition: transform 500ms;
   top: 0;
   left: 0;
+  box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px, rgba(15, 15, 15, 0.1) 0px 3px 6px;
 }
 
 
 .popover-box {
   background: #fff;
   width: @box-width;
-  height: 100px
+  height: 96px
 }
 
 .popover-arrow {
@@ -22,5 +23,42 @@
   border-bottom: 6px solid #fff;
   top: -6px;
   left: @box-width/2 - 3px;
-  filter: drop-shadow(0px -2px 2px rgba(52, 73, 94, 0.1));
+  filter: drop-shadow(0px -2px 2px rgba(15, 15, 15, 0.1));
 }
+
+.popover-ul {
+  padding-top: 6px;
+  padding-bottom: 6px;
+
+  & > li {
+    display: flex;
+    align-items: center;
+    line-height: 120%;
+    width: 100%;
+    user-select: none;
+    min-height: 28px;
+    font-size: 14px;
+    color: rgb(55, 53, 47);
+    cursor: pointer;
+
+    &:hover {
+      background-color: #efefef;
+    }
+
+    &:active {
+      background-color: #dfdede;
+    }
+  }
+
+  span {
+    margin-left: 8px;
+    margin-right: 14px;
+    min-width: 0px;
+    flex: 1 1 auto;
+  }
+
+  i {
+    margin-left: 14px;
+  }
+}
+
