--- a/src/render/popover/popover.global.less
+++ b/src/render/popover/popover.global.less
@@ -5,6 +5,8 @@
   transition: transform 500ms;
   top: 0;
   left: 0;
+  border-radius: 2px;
+  z-index: 1001;
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px, rgba(15, 15, 15, 0.1) 0px 3px 6px;
 }
 
