--- a/src/render/modals/BaseModal.global.less
+++ b/src/render/modals/BaseModal.global.less
@@ -1,4 +1,4 @@
-.modal-container,.api-global-loading {
+.modal-container, .api-global-loading {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -22,7 +22,7 @@
   transform: translateY(-50%);
 }
 
-.modal-title{
+.modal-title {
   font-size: 14px;
   margin: 10px 10px 0 10px;
   font-weight: 500;
@@ -30,8 +30,15 @@
   justify-content: space-between;
 }
 
-.modal-close-icon{
+.modal-close-icon {
   color: #777777;
   cursor: pointer;
   font-size: 16px;
+}
+
+.modal-item {
+  margin: 10px 0;
+  color: #444;
+  font-size: 14px;
+  word-break: break-all;
 }
