--- a/src/render/popover/popover.global.less
+++ b/src/render/popover/popover.global.less
@@ -8,16 +8,12 @@
   border-radius: 2px;
   z-index: 1001;
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px, rgba(15, 15, 15, 0.1) 0px 3px 6px;
-}
-
-
-.popover-box {
   background: #fff;
   width: @box-width;
   height: 96px
 }
 
-.popover-arrow {
+.popover-arrow-down {
   display: block;
   position: absolute;
   border-left: 6px solid transparent;
@@ -26,6 +22,17 @@
   top: -6px;
   left: @box-width/2 - 3px;
   filter: drop-shadow(0px -2px 2px rgba(15, 15, 15, 0.1));
+}
+
+.popover-arrow-up {
+  display: block;
+  position: absolute;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #fff;
+  bottom: -6px;
+  left: @box-width/2 - 3px;
+  filter: drop-shadow(0px 2px 2px rgba(52, 73, 94, 0.1));
 }
 
 .popover-ul {
