--- a/src/render/pages/editor.global.less
+++ b/src/render/pages/editor.global.less
@@ -40,3 +40,7 @@
 .cm-s-hypermd-light {
   font: 14px/1.5 Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "HeitiSC", "WenQuanYi Micro Hei", sans-serif;
 }
+
+.cm-s-hypermd-light pre.HyperMD-list-line span.cm-formatting-list, .cm-s-hypermd-light pre.HyperMD-list-line span.cm-hmd-list-indent {
+  padding-top: 0.2em;
+}
