--- a/src/render/pages/FileLists.less
+++ b/src/render/pages/FileLists.less
@@ -20,10 +20,7 @@
   justify-content: space-between;
   display: flex;
 
-  > i {
-    width: 16px;
-    height: 16px;
-    border-radius: 4px;
+  > svg {
     color: #C7C6C2;
 
     &:hover {
@@ -67,12 +64,9 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 
-  > i:global(.iconfont) {
+  > svg {
     margin-right: 4px;
     transition: 0.3s transform;
-    display: inline-block;
-    height: 16px;
-    line-height: 16px;
 
     &:hover {
       background-color: #DaD9D7;
@@ -89,15 +83,15 @@
   display: none;
   margin-left: 4px;
 
-  i {
+  svg {
     color: #656262;
   }
 
-  i:first-child {
+  svg:first-child {
     margin-right: 4px;
   }
 
-  i:hover {
+  svg:hover {
     background-color: #DaD9D7;
     border-radius: 2px;
   }
