refactor: 所有 icon 的替换

--- a/src/render/pages/FileLists.less
+++ b/src/render/pages/FileLists.less
@@ -63,6 +63,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
 
   > svg {
     margin-right: 4px;
@@ -82,10 +84,6 @@
 .control {
   display: none;
   margin-left: 4px;
-
-  svg {
-    color: #656262;
-  }
 
   svg:first-child {
     margin-right: 4px;
